--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 		WIcker will scrape the text of the article as it was on the day that is selected.
 		However, if the date to start scraping is prior to the article's creation,
 			WIcker will return the earliest version of the article for that time.</p>
-	<p>How often the article will be scraped determines at what times the scraper will collect a version.
-		Note that a larger number of versions will take longer to scrape.</p>
+	<p>An article that has many revisions will take longer to scrape.</p>
 	<p>You can request that WIcker print the resulting text as xml or in a human readable format.
 		Characters such as "&amp;" and "&lt;" are removed from the resulting text to prevent xml errors.
 		As well, you can choose between plain text formatting and Wikipedia style formatting.
@@ -105,12 +104,12 @@
 			<div class="form-group">
 				<label>How often should an article be scraped?</label>
 				<select class="form-control" id="oftenDate" onchange=validateInfo(); oninput=validateInfo();>
-					<option value="7">every week</option>
-					<option value="14">every two weeks</option>
-					<option value="30">every month</option>
-					<option value="61">every two months</option>
-					<option value="183">every six months</option>
-					<option value="365">every year</option>
+					<option value="7">every week (7 days)</option>
+					<option value="14">every two weeks (14 days)</option>
+					<option value="30">every month (30 days)</option>
+					<option value="61">every two months (61 days)</option>
+					<option value="183">every six months (183 days)</option>
+					<option value="365">every year (365 days)</option>
 				</select>
 			</div>
 			<!-- Whether to have XML output or human readable output and plain text or Wikipedia Formatting-->
