--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset=utf-8>
-	<title>WIcker (Wikipedia Idea scraper)</title>
+	<title>WIScker (Wikipedia Idea Scraper)</title>
 	<meta name="description" content="Wikipedia Scraper">
 	<meta name="author" content="abudac">
 <!-- ============================================================================================== -->
@@ -11,7 +11,7 @@
 <!-- Original idea by Robert Budac 																  	-->
 <!-- Contributors: Andrea Budac, Geoffrey Rockwell, Zachary Palmer, Robert Budac, Stan Ruecker		-->
 <!-- ============================================================================================== -->
-<!-- WIkcer (Wikipedia Idea Scraper) is a tool for scraping old revisions of Wikipedia articles.    -->
+<!-- WIScker (Wikipedia Idea Scraper) is a tool for scraping old revisions of Wikipedia articles.    -->
 <!-- The corpus resulting from the scrape is then available to the user to analyze as they see fit. -->
 <!-- 																								-->
 <!-- Copyright (C) 2014-2015  Andrea Budac and INKE													-->
@@ -43,38 +43,52 @@
 </head>
 <body>
 <!--- Header containing logo and name -->
-<header class="mainTitle">WIcker
+<header class="mainTitle">
+	<span id="siteTitle">WIScker</span>
+	<!-- Images that link to their respective sites -->
+	<div class="uALogo"><a href="http://www.ualberta.ca/" target="_blank"> <img src="img/ua-color.png"
+		alt="Logo for the University of Alberta that links to the university's main website"> </a> </div>
+	<div class="iNKELogo"><a href="http://inke.ca/" target="_blank"><img src="img/inke_logo.png"
+		alt="Logo for the INKE group that links to INKE's website"> </a> </div>
+	<div id="screenSpecificBreak"><br></div>
 	<!-- Info Panels Buttons -->
 	<span id="aboutInfo">About</span>
 	<span id="helpInfo">Instructions</span>
-	<!-- Images that link to their respective sites -->
-	<div class="iNKELogo"><a href="http://inke.ca/" target="_blank"><img src="img/inke_logo.png"
-		alt="Logo for the INKE group that links to INKE's website"> </a> </div>
-	<div class="uALogo"><a href="http://www.ualberta.ca/" target="_blank"> <img src="img/ua-color.png"
-		alt="Logo for the University of Alberta that links to the university's main website"> </a> </div>
+	<span id="questionsInfo">FAQ</span>
 </header>
-<!-- Section for About and Instructions -->
+<!-- Section for About, Instructions and FAQ-->
 <section class="infoPanel" id="aboutPanel">
-	WIkcer (Wikipedia Idea Scraper) is a tool for scraping old versions of Wikipedia articles.
+	WIScker (Wikipedia Idea Scraper) is a tool for scraping old versions of Wikipedia articles.
 	The corpus resulting from the scrape is then available to you to analyze as you see fit.
-	WIcker supports all languages of Wikipedia.
+	WIScker supports all languages of Wikipedia.
 	<br>
-	WIcker was created at the University of Alberta under the INKE project.
+	WIScker was created at the University of Alberta under the INKE project.
+	<br>
+	The entire tool was written in Javascript and as a result, can be downloaded for your own use by saving this webpage to your computer. The WIScker source code is also available at [].
 </section>
 <section class="infoPanel" id="helpPanel">
-	<p>In order to scape an article, copy the URL of the Wikipedia article you would like to scrape directly into this form, 
-	then enter the interval of time that you would like the article to be scraped for.
-		WIcker will scrape the text of the article as it was on the day that is selected.
-		However, if the date to start scraping is prior to the article's creation,
-			WIcker will return the earliest version of the article for that time.</p>
-	<p>An article that has many revisions will take longer to scrape.</p>
-	<p>You can request that WIcker print the resulting text as xml or in a human readable format.
-		Characters such as "&amp;" and "&lt;" are removed from the resulting text to prevent xml errors.
-		As well, you can choose between plain text formatting and Wikipedia style formatting.
-		Plain text format is more readable, but has data such as links and the infobox removed.</p>
-	Once the form is filled, press the "Scrape" button and WIcker will print the corpus below the Wikipedia window.
-	To copy the resulting text, press the "Select Text" button and the copy it into whatever software you wish to use to analyze it.
-	The "Reset" button clears the form and the output section.
+	<p>
+		In order to scape an article, copy the URL of the Wikipedia article you would like to scrape directly into this form, then select either <i>Date</i> or <i>Frequency</i> scraping type. 
+		For <i>Date</i> scraping type, enter the duration that you would like the article to be scraped for and the frequency. For <i>Frequency</i> scraping type, just enter how often you want to collect revisions from the entirety of the article's history.
+	</p><p>
+		Once the form is filled, press the "Scrape" button and WIScker will print the corpus below the Wikipedia window.
+		To copy the resulting text, press the "Select Text" button and the copy it into whatever software you wish to use to analyze it.
+		The "Reset" button clears the form and the output section.
+	</p>
+</section>
+<section class="infoPanel" id="questionsPanel">
+	<p><b>Why is it taking so long?</b> <br>
+		An article that has many revisions will take longer to scrape. You can check how many revisions an article has in Wikipedia by clicking "View History," near the top of the page. 
+	</p>
+	<p><b>What is the difference between plain text formatting and Wikipedia style formatting?</b> <br>
+		Plain text format is more readable, but has data such as links and the infobox removed.
+	</p>
+	<p><b>When scraping by date, when, exactly, does WIScker collect a revision of an article?</b> <br>
+		WIScker will scrape the text of the article as it was on the day that is selected. However, if the date to start scraping is prior to the article's creation, WIScker will return the earliest version of the article for that time.
+	</p>
+	<p><b>What formats can the corpus be printed in?</b><br>
+		You can request that WIScker print the resulting text as xml or in a human readable format. Characters such as "&amp;" and "&lt;" are removed from the resulting text to prevent xml errors.
+	</p>
 </section>
 <section class="mainFormAndOutput">
 	<!-- Form for User on Left -->
@@ -88,30 +102,62 @@
 					data-toggle="popover"
 					onchange=validateInfo(); oninput=validateInfo();>
 			</div>
-			<!-- Date to start searching -->
-			<div class="form-group" id="startDateBox">
-				<label>Date to start scraping:</label>
-				<br>
-				<input type="text" class="form-control" id="startDate" placeholder="yyyy/mm/dd" data-toggle="popover">
+			<!-- What type of searching to do -->
+			<div class="form-group" id="scrapeTypeBox">
+				<label>Scraping type:</label>
+				<div class="radioButtons">
+					<label class="radioLabel">
+						<input type="radio" id="scrapeTypeRadio1" name="scrapeTypeRadio" class="scrapeTypeRadio" value="dateSelected"
+							onchange=validateInfo(); onclick=validateInfo(); checked>
+							Date
+					</label>
+					<label class="radioLabel">
+						<input type="radio" id="scrapeTypeRadio2" name="scrapeTypeRadio" class="scrapeTypeRadio" value="frequencySelected"
+						onchange=validateInfo(); onclick=validateInfo();>
+							Frequency
+					</label>
+				</div>
 			</div>
-			<!-- Date to end search -->
-			<div class="form-group" id="endDateBox">
-				<label>Date to end scraping:</label>
-				<br>
-				<input type="text" class="form-control" id="endDate" placeholder="yyyy/mm/dd" data-toggle="popover">
-			</div>
-			<!-- How often to grab revision -->
-			<div class="form-group">
-				<label>How often should an article be scraped?</label>
-				<select class="form-control" id="oftenDate" onchange=validateInfo(); oninput=validateInfo();>
-					<option value="7">every week (7 days)</option>
-					<option value="14">every two weeks (14 days)</option>
-					<option value="30">every month (30 days)</option>
-					<option value="61">every two months (61 days)</option>
-					<option value="183">every six months (183 days)</option>
-					<option value="365">every year (365 days)</option>
-				</select>
-			</div>
+			<!-- Date Section -->
+			<section class="scrapingPanel" id="datePanel">
+				<!-- Date to start searching -->
+				<div class="form-group" id="startDateBox">
+					<label>Date to start scraping:</label>
+					<br>
+					<input type="text" class="form-control" id="startDate" placeholder="yyyy/mm/dd" data-toggle="popover">
+				</div>
+				<!-- Date to end search -->
+				<div class="form-group" id="endDateBox">
+					<label>Date to end scraping:</label>
+					<br>
+					<input type="text" class="form-control" id="endDate" placeholder="yyyy/mm/dd" data-toggle="popover">
+				</div>
+				<!-- How often to grab revision -->
+				<div class="form-group">
+					<label>How often should an article be scraped?</label>
+					<select class="form-control" id="oftenDate" onchange=validateInfo(); oninput=validateInfo();>
+						<option value="7">every week (7 days)</option>
+						<option value="14">every two weeks (14 days)</option>
+						<option value="30">every month (30 days)</option>
+						<option value="61">every two months (61 days)</option>
+						<option value="183">every six months (183 days)</option>
+						<option value="365">every year (365 days)</option>
+					</select>
+				</div>
+			</section>
+			<!-- Frequency Section -->
+			<section class="scrapingPanel" id="frequencyPanel">
+				<!-- How frequently to grab revision -->
+				<div class="form-group">
+					<label>How frequently should an article be scraped?</label>
+					<select class="form-control" id="frequentDate" onchange=validateInfo(); oninput=validateInfo();>
+						<option value="5">every 5 revisions</option>
+						<option value="10">every 10 revisions</option>
+						<option value="25">every 25 revisions</option>
+						<option value="50">every 50 revisions</option>
+					</select>
+				</div>
+			</section>
 			<!-- Whether to have XML output or human readable output and plain text or Wikipedia Formatting-->
 			<div class="form-group">
 				<label>How should the text be formatted?</label>
