Added Github link to "About" section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<br>
 	WIScker was created at the University of Alberta under the INKE project.
 	<br>
-	The entire tool was written in Javascript and as a result, can be downloaded for your own use by saving this webpage to your computer. The WIScker source code is also available at [].
+	The entire tool was written in Javascript and as a result, can be downloaded for your own use by saving this webpage to your computer. The WIScker source code is also available at <a href="https://github.com/abudac/INKE_WIcker">GitHub</a>.
 </section>
 <section class="infoPanel" id="helpPanel">
 	<p>
