--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 	<br>
 	WIScker was created at the University of Alberta under the INKE project.
 	<br>
-	The entire tool was written in Javascript and as a result, can be downloaded for your own use by saving this webpage to your computer. The WIScker source code is also available at <a href="https://github.com/abudac/INKE_WIScker">GitHub</a>.
+	The entire tool was written in JavaScript and as a result, can be downloaded for your own use by saving this webpage to your computer. The WIScker source code is also available at <a href="https://github.com/abudac/INKE_WIScker">GitHub</a>.
 </section>
 <section class="infoPanel" id="helpPanel">
 	<p>
-		In order to scape an article, copy the URL of the Wikipedia article you would like to scrape directly into this form, then select either <i>Date</i> or <i>Frequency</i> scraping type. 
-		For <i>Date</i> scraping type, enter the duration that you would like the article to be scraped for and the frequency. For <i>Frequency</i> scraping type, just enter how often you want to collect revisions from the entirety of the article's history.
+		In order to scape an article, copy the URL of the Wikipedia article you would like to scrape directly into this form and enter the duration that you would like the article to be scraped for. Then select either <i>Date</i> or <i>Frequency</i> scraping type. 
+		The scraping type determines how often you want to collect revisions.
 	</p><p>
 		Once the form is filled, press the "Scrape" button and WIScker will print the corpus below the Wikipedia window.
 		To copy the resulting text, press the "Select Text" button and the copy it into whatever software you wish to use to analyze it.
@@ -84,7 +84,7 @@
 		Plain text format is more readable, but has data such as links and the infobox removed.
 	</p>
 	<p><b>When scraping by date, when, exactly, does WIScker collect a revision of an article?</b> <br>
-		WIScker will scrape the text of the article as it was on the day that is selected. However, if the date to start scraping is prior to the article's creation, WIScker will return the earliest version of the article for that time.
+		WIScker will scrape the text of the article as it was on the day that is selected. However, if the date to start scraping is prior to the article's creation, WIScker will skip to and start at the date of the article's creation.
 	</p>
 	<p><b>What formats can the corpus be printed in?</b><br>
 		You can request that WIScker print the resulting text as xml or in a human readable format. Characters such as "&amp;" and "&lt;" are removed from the resulting text to prevent xml errors.
@@ -101,6 +101,18 @@
 				<input type="text" class="form-control" id="wikiAddress" placeholder="http://en.wikipedia.org/"
 					data-toggle="popover"
 					onchange=validateInfo(); oninput=validateInfo();>
+			</div>
+			<!-- Date to start searching -->
+			<div class="form-group" id="startDateBox">
+				<label>Date to start scraping:</label>
+				<br>
+				<input type="text" class="form-control" id="startDate" placeholder="yyyy/mm/dd" data-toggle="popover">
+			</div>
+			<!-- Date to end search -->
+			<div class="form-group" id="endDateBox">
+				<label>Date to end scraping:</label>
+				<br>
+				<input type="text" class="form-control" id="endDate" placeholder="yyyy/mm/dd" data-toggle="popover">
 			</div>
 			<!-- What type of searching to do -->
 			<div class="form-group" id="scrapeTypeBox">
@@ -120,18 +132,6 @@
 			</div>
 			<!-- Date Section -->
 			<section class="scrapingPanel" id="datePanel">
-				<!-- Date to start searching -->
-				<div class="form-group" id="startDateBox">
-					<label>Date to start scraping:</label>
-					<br>
-					<input type="text" class="form-control" id="startDate" placeholder="yyyy/mm/dd" data-toggle="popover">
-				</div>
-				<!-- Date to end search -->
-				<div class="form-group" id="endDateBox">
-					<label>Date to end scraping:</label>
-					<br>
-					<input type="text" class="form-control" id="endDate" placeholder="yyyy/mm/dd" data-toggle="popover">
-				</div>
 				<!-- How often to grab revision -->
 				<div class="form-group">
 					<label>How often should an article be scraped?</label>
@@ -153,8 +153,8 @@
 					<select class="form-control" id="frequentDate" onchange=validateInfo(); oninput=validateInfo();>
 						<option value="5">every 5 revisions</option>
 						<option value="10">every 10 revisions</option>
-						<option value="25">every 25 revisions</option>
-						<option value="50">every 50 revisions</option>
+						<option value="20">every 20 revisions</option>
+						<option value="40">every 40 revisions</option>
 					</select>
 				</div>
 			</section>
