--- a/index.html
+++ b/index.html
@@ -172,8 +172,13 @@
 				</select>
 			</div>
 		</form>
-		<div class="progress" id="progressBarWrapper">
-			<div class="progress-bar progress-bar-success progress-bar-striped active" id="progressBar">
+		<div class="progress" id="progressBarAllWrapper">
+			<div class="progress-bar progress-bar-success progress-bar-striped active" id="progressBarAll">
+				<span class="sr-only"></span>
+			</div>
+		</div>
+		<div class="progress" id="progressBarContentWrapper">
+			<div class="progress-bar progress-bar-info progress-bar-striped active" id="progressBarContent">
 				<span class="sr-only"></span>
 			</div>
 		</div>
