--- a/index.html
+++ b/index.html
@@ -183,10 +183,19 @@
 			</div>
 		</div>
 		<!-- Buttons -->
-		<button type="button" class="btn btn-success" id="submitButton" onclick=wikiScrapeGo();>Scrape</button>
-		<button type="button" class="btn btn-warning" id="resetButton" onclick=resetForm();>Reset</button>
-		<button type="button" class="btn btn-info" id="selectTextButton" onclick=selectAllText('printOutHere');>Select Text</button>
+		<div class="buttons" id="buttonsDiv">
+			<button type="button" class="btn btn-success" id="submitButton" onclick=wikiScrapeGo();>Scrape</button>
+			<button type="button" class="btn btn-warning" id="resetButton" onclick=resetForm();>Reset</button>
+			<button type="button" class="btn btn-info" id="selectTextButton" onclick=selectAllText('printOutHere');>Select Text</button>
+			<button type="button" class="btn btn-info" id="sendToVoyantButton" onclick=sendEscpapedToVoyant('printOutHere');>Send to Voyant</button>
+		</div>
 	</section>
+	<!-- Post the content to Voyant, it will take care of handing the content and redirecting to the new corpus -->
+	<form id="sendToVoyantForm" action="http://voyant-tools.org" method="POST" target="_blank">
+		<input type="hidden" id="sendToVoyantContent" name="input" value="" />
+		<input type="hidden" name="xmlTitleXpath" value="//version/revision_date" />
+		<input type="hidden" name="xmlDocumentXpath" value="//body" />
+	</form>
 	<!-- Output Section on Right -->
 	<section class="wikiOutputRight">
 		<!-- Page Preview -->
