--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		The scraping type determines how often you want to collect revisions.
 	</p><p>
 		Once the form is filled, press the "Scrape" button and WIScker will print the corpus below the Wikipedia window.
-		To copy the resulting text, press the "Select Text" button and the copy it into whatever software you wish to use to analyze it.
+		To copy the resulting text, press the "Select Text" button and the copy it into whatever software you wish to use to analyze it. Another option is to press the "Send to Voyant" button, which will automatically upload the corpus to <a href="http://beta.voyant-tools.org/">Voyant Tools</a> and open a new tab. For best results, use xml when sending to Voyant.
 		The "Reset" button clears the form and the output section.
 	</p>
 </section>
@@ -187,15 +187,16 @@
 			<button type="button" class="btn btn-success" id="submitButton" onclick=wikiScrapeGo();>Scrape</button>
 			<button type="button" class="btn btn-warning" id="resetButton" onclick=resetForm();>Reset</button>
 			<button type="button" class="btn btn-info" id="selectTextButton" onclick=selectAllText('printOutHere');>Select Text</button>
-			<button type="button" class="btn btn-info" id="sendToVoyantButton" onclick=sendEscpapedToVoyant('printOutHere');>Send to Voyant</button>
+			<!-- Post the content to Voyant, it will take care of handing the content and redirecting to the new corpus -->
+			<form id="sendToVoyantForm" action="http://beta.voyant-tools.org" method="POST" target="_blank" onsubmit='return sendEscpapedToVoyant();'>
+				<input type="hidden" id="sendToVoyantContent" name="input" value="" />
+				<input type="hidden" name="xmlDocumentsXpath" value="//version"/>
+				<input type="hidden" name="xmlAuthorXpath" value="//author"/>
+				<input type="hidden" name="xmlTitleXpath" value="//revision_date"/>
+				<input type="submit" id="sendToVoyantButton" class="btn btn-info" value="Send to Voyant">
+			</form>
 		</div>
 	</section>
-	<!-- Post the content to Voyant, it will take care of handing the content and redirecting to the new corpus -->
-	<form id="sendToVoyantForm" action="http://voyant-tools.org" method="POST" target="_blank">
-		<input type="hidden" id="sendToVoyantContent" name="input" value="" />
-		<input type="hidden" name="xmlTitleXpath" value="//version/revision_date" />
-		<input type="hidden" name="xmlDocumentXpath" value="//body" />
-	</form>
 	<!-- Output Section on Right -->
 	<section class="wikiOutputRight">
 		<!-- Page Preview -->
